Started stubbing out Tools, Tool ActivationMethods, Groups for Tool ActivationMethods, and a ButtonToolRenderer ...
Thoughts to far:

A Tool is a thing that does stuff. You "activate" it, and it gets the spotlight. Only 1 Tool is active at a time.
A Tool is activated by one of several methods:
 - a hotkey
 - a button
 - a menu-item
 - (there will be more, just don't know what they are yet)

Regardless of how it's activated, a Tool can define several handlers -- for example:
 - map-click listener
 - map-drag listener
 - something else -- maybe a Window renderer ...